# pyServer

./: .gitignore  pyproject.toml  readme.md  requirements.txt
logs/: _00000.jsonl  _00001.jsonl
server/: CMakeLists.txt
src/: glaph_dash.py  main.py  simple_dash.py
zeroqn/: control_client.py  control_server.py
